@@ -1,3 +1,8 @@
+2010-05-20  Sancho Lerena <slerena@artica.es>
+
+	* util/plugins/snmp_process.pl: Some small modifications and fixes for 
+	RAM output, also improved help.
+
 2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* DEBIAN/control: added the depends libio-socket-multicast-perl.
